# pySpectroWorks

./: Demo-education.ipynb  README.md  api_test.py  environment.yml  pyproject.toml  pyspectroworks.py
.github/workflows/: python-publish.yml
notebooks/test-notebook/: Demo-education.ipynb  pyspectroworks.py
src/pyspectroworks/: __init__.py
